//
//  HomeViewAccessibiltyIdentifiers.swift
//  GithubStargazers
//
//  Created by Claudio Barbera on 12/02/21.
//

import Foundation

enum HomeViewAccessibilityIdentifiers: String {
    case userTextFieldIdentifier
    case repoTextFieldIdentifier
    case searchButtonIdentifier
    case activityIndicatorIdentifier
}
